# Project-kamayuc_ws

./: Readme.md
ackermann_drive_controller/: ackermann_drive_controller_plugins.xml  package.xml
ackermann_drive_controller/config/: AckermannDriveController.cfg  control_ackermann_drive.yaml
ackermann_drive_controller/include/ackermann_drive_controller/: ackermann_drive_controller.h  ackermann_drive_enums.h  odometry.h
ackermann_drive_controller/src/: ackermann_drive_controller.cpp  odometry.cpp
kamayuc_control/: CMakeLists.txt  package.xml
kamayuc_control/config/: control_ackermann_drive.yaml  pid_gains.yaml
kamayuc_control/launch/: control.launch  pacha_spawn.launch
kamayuc_description/: CMakeLists.txt  package.xml
kamayuc_description/launch/: description.launch  rviz_view_model.launch  spawn.launch  urdf_visualize.launch
kamayuc_description/meshes/legs/: rover_r_first_acople.dae  rover_r_second_coupling.dae
kamayuc_description/meshes/wheels/: rover_r_wheel.dae
kamayuc_description/rviz/: description.rviz
kamayuc_description/urdf/: rover_materials.xacro  rover_v1.urdf.xacro
